# math-organizer

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat
backend/: engine.py
config/: knowledge_tree.yml  opd_markers.yml  settings.example.yml  subject.yml
gui/: __init__.py  app.py
src/: __init__.py  archive.py  config.py  models.py  pipeline.py
src/validators/: __init__.py  dedup.py  directory_validator.py  frontmatter_validator.py  knowledge_tree.py  naming_validator.py  opd_validator.py
templates/: LLM 输出 JSON Schema.json  Markdown 文件模板（Obsidian 兼容格式）.md  md_template.j2  paddleAPI.py  paddleAPItemplate.md  分类标签字段说明.xlsx  文件命名规范.txt  目录结构规范.txt
tests/: conftest.py  test_api_integration.py  test_batch.py  test_directory_and_dedup.py  test_frontmatter_validator.py  test_gui.py  test_integration.py  test_knowledge_tree_validator.py  test_models.py  test_naming_validator.py  test_opd_validator.py  test_pipeline_and_archive.py
tests/data/: invalid_bad_enum.json  invalid_frontmatter_bad_opd.md  invalid_frontmatter_bad_summary.md  invalid_missing_field.json  valid_frontmatter.md  valid_problem.json
