[project]
name = "math-organizer"
version = "0.1.0"
description = "考研数学题目智能整理 Agent — OCR识别、LLM整理、自动归档为 Obsidian 题库"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "integration: tests that require live API access (PaddleOCR, DeepSeek)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
